2003-01-08	blytkerchan
	* poll.pl: rename base_url to response_url

2003-01-07	blytkerchan
	* poll_response.pl: new experimental implementation..

	* jailust.questions.sql: add ask_email field
	* poll_response.pl: new file

	* poll.pl: update config settings
	update URL of stylesheet
	repair support of examples
	* jailust.answers.sql: add some data
	
	* jailust.answers.sql: new file
	* poll.pl: take answers into account
	* jailust.questions.sql: make `examples' and `answers' more obviously boolean
	let the second question have answers

	* jailust.examples.sql: name the table properly
	fix the size of the example (make it TEXT in stead of VARCHAR)

	* poll.pl: preparations for usage on a server (committed in earlier commit - forgot to mention it here)

	* intended_audience.html: removed - contents moved to index.html
	* index.html: updated with intended audience info
	* table.html: updated

2003-01-06	blytkerchan
	* poll.pl: take examples into account
	* poll.css: ditto
	* jailust.examples.sql: new file
	* jailust.questions.sql: add some nonesense data for testing

	* poll.pl: new file
	* poll.css: ditto
	* jailust.questions.sql: ditto
	
2003-12-09	blytkerchan
	* design.html: re-write
	* language.html: add (most of) old contents of design.html
	* table.html: update to reflect new file
	* development.html: update the development plan

	* language.html: new file

2003-10-05	blytkerchan
	* development.html: new file
	* table.html: add link to development.html

2003-09-29	blytkerchan
	* how_you_can_help.html: fix an embedded list so it doesn't show up as
	an extra bullet in lynx

2003-09-21	blytkerchan
	* design.html: remove the "generator" meta-tag: files are hand-written
	* empty.html: ditto
	* goals.html: ditto
	* how_you_can_help.html: ditto
	* index.html: ditto
	* intended_audience.html: ditto
	* progress.html: ditto
	* table.html: ditto
	* tech_arch.html: ditto

	* table.html: remove "last updated" line - ugly in the table
