@@ -46,12 +46,15 @@ object-oriented programming language, etc.</p>
 <a href=
 "http://sourceforge.net"><img src=
 "http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
-width="210" height="62" border="0" align="right" alt=
-"SourceForge.net Logo"></a>
+width="210" height="62" border="0" alt=
+"SourceForge.net Logo"></a><br/>
+<iframe name="pollframe" src="/cgi-bin/poll.pl" type="text/html" width="100%" height="400" frameborder=0>
+<p>The TOC should be here..</p>
+</iframe>
 </td>
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2004/01/07 11:04:46 $</div>
+<div align="right">This page was last updated: $Date: 2004/01/08 14:25:46 $</div>
 </body>
 </html>
