@@ -85,7 +85,7 @@ sub output_body()
 	
 	%question = fetch_question();
 
-	print "<form action=\"$response_url\" method=\"post\" enctype=\"text/plain\" accept-charset=\"utf8\" style=\"width: 210;\">\n";
+	print "<form action=\"$response_url\" method=\"post\" enctype=\"text/plain\" accept-charset=\"utf8\" style=\"width: 200;\">\n";
 	print "<div id=\"question\">".$question{question}."</div>\n";
 
 	$arrayref = $question{examples};
