@@ -3,19 +3,11 @@ use Data::Dumper;
 use DBI();
 
 $print_header = 1;
-$base_url     = '/cgi-bin/poll.pl';
 $db_database  = 'jail';
 $db_host      = 'localhost';
 $db_username  = 'ronald';
 $db_password  = '770217104';
-$PROGID       = '$Id: poll_response.pl,v 1.2 2004/01/07 17:27:59 blytkerchan Exp $';
-
-sub connect_database()
-{
-	$db{dsn} = "DBI:mysql:database=$db_database;host=$db_host";
-	$db{dbh} = DBI->connect($db{dsn}, $db_username, $db_password, 
-	                        {'RaiseError' => 1});
-}
+$PROGID       = '$Id: poll_response.pl,v 1.3 2004/01/08 14:25:46 blytkerchan Exp $';
 
 sub connect_database()
 {
@@ -44,11 +36,12 @@ sub put_response($)
 	my $sth;
 	my $template;
 	
-	$sth = $db{dbh}->prepare("CREATE TABLE IF NOT EXIST responses (uid INT(16) NOT NULL DEFAULT '0' AUTO_INCREMENT PRIMARY KEY, question_id INT(16) NOT NULL DEFAULT '0', response TEXT NOT NULL);");
+	$sth = $db{dbh}->prepare("CREATE TABLE IF NOT EXISTS responses (uid INT(16) NOT NULL DEFAULT '0' AUTO_INCREMENT PRIMARY KEY, question_id INT(16) NOT NULL DEFAULT '0', response TEXT NOT NULL);");
 	$sth->execute();
 
-	$template = "INSERT INTO responses VALUES (\'1\',\'%s\')";
-	$sth->execute(sprintf($template, $_[0]));
+	$template = "INSERT INTO responses (question_id, response) VALUES (\'1\',\'%s\')";
+	$sth = $db{dbh}->prepare(sprintf($template, $_[0]));
+	$sth->execute();
 }
 
 sub output_body()
