@@ -1,4 +1,8 @@
 2003-01-08	blytkerchan
+	* poll.pl: set width of poll form to 200 pixels
+	* index.html: integrate poll.pl in an iframe under the SF logo
+	* poll_response.pl: repair experimental version
+
 	* poll.pl: rename base_url to response_url
 
 2003-01-07	blytkerchan
